# utils

./: .gitignore
bash/: find-tweet
c/: .directory  Makefile  ascii.c  bits2i.c  bool.h  camel2snake.c  capitalise.c  countdir.c  countdir.h  dblqt.c  double_from_string.h  duration-of.c  echo-if-contains.c  extract-audio.c  get_basename.c  get_basenames_in_dir.c  get_names_and_basenames_in_dir.c  get_yt_ids.c  historic2dollar.c  i2bits.c  ip2i.c  lsdir.c  x2y.c
c++/: .directory  .gitignore  Makefile  base64.cpp  boost-regex.cpp  compact-regex.cpp  cvt-png.cpp  diff-bin.cpp  empty-program.cpp  fbmsg.cpp  file-exists.cpp  find-imgs-w-dims.cpp  find_largest_files.cpp  find_media_files.cpp  get-creation-timestamp.cpp  get-file-dimensions.cpp  html_lexer.cpp  is-small-prime.cpp  largest-common-substring.cpp  monitor-dir.cpp  primes_10k.txt  print-bin.cpp  py-utils.cpp  reddit36.cpp  reddit_case.cpp  str-rotate.cpp  str2switch.cpp  tcpdump2db.cpp  web64.cpp
c++/qt/: CMakeLists.txt  main.cpp  name_dialog.cpp  name_dialog.hpp
javascript/: _find-names.js  _merge-reddit-posts.js  chatgpt.js  dl_imgs_lib.js  dl_imgs_lib.sh  facebook.convert_user_profile_images.js  facebook.dl-msgs.js  fbmsgs.js  github.js  highlight-regexp.js  i.redd.it.js  nitter.js  reddit-btns.js  reddit.earthporn.js  reddit.tagem-archive.js  steemit.js  subredditstats.com.js  suno.ai.js  tinder-scrape-msgs.js  twitch.tv.js  twitter.clean-links.js  twitter.scrape-followers.js  web.archive.org.js  wikipedia-table.js  yandex-cache.js  yandex-imgs.2.js  yandex-imgs.js  youtube.js
python/: coronavirus.py  (+6 more)
(+21 files in other folders)
